--- a/index.html
+++ b/index.html
@@ -5,39 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Calculator(Simple)</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="script.js" defer></script>
+  <script src="javascript.js" defer></script>
 </head>
 <body>
     <h1>Calculator</h1>
-    <div id="output"></div>
+    <div id="result"></div>
    <div class="spButton">
     <button id="clr">Clr</button>
     <button id="del">Del</button>
    </div>
  <ul class="row">
-  <button id="7" class="num">7</button> 
-  <button id="8" class="num">8</button> 
-  <button id="9" class="num">9</button> 
-  <button id="/" class="num">/</button> 
- </ul> 
- <ul class="row">
-  <button id="4" class="num">4</button> 
-  <button id="5" class="num">5</button> 
-  <button id="6" class="num">6</button> 
-  <button id="*" class="num">X</button> 
- </ul> 
- <ul class="row">
-  <button id="1" class="num">1</button> 
-  <button id="2" class="num">2</button> 
-  <button id="3" class="num">3</button> 
-  <button id="-" class="num">-</button> 
- </ul> 
+  <button class="btn" data-value="7">7</button>
+  <button class="btn" data-value="8">8</button>
+  <button class="btn" data-value="9">9</button>
+  <button class="btn" data-value="/">/</button>
+</ul>
 <ul class="row">
-  <button id="." class="num">.</button> 
-  <button id="0" class="num">0</button> 
-  <button id="=" class="num">=</button> 
-  <button id="+" class="num">+</button> 
- </ul> 
+  <button class="btn" data-value="4">4</button>
+  <button class="btn" data-value="5">5</button>
+  <button class="btn" data-value="6">6</button>
+  <button class="btn" data-value="*">*</button>
+</ul>
+ 
+<ul class="row">
+  <button class="btn" data-value="1">1</button>
+  <button class="btn" data-value="2">2</button>
+  <button class="btn" data-value="3">3</button>
+  <button class="btn" data-value="-">-</button>
+</ul>
+ 
+ 
+<ul class="row">
+  <button class="btn" data-value=".">.</button>
+  <button class="btn" data-value="0">0</button>
+  <button class="btn" id="equals" data-value="=">=</button>
+  <button class="btn" data-value="+">+</button>
+</ul>
+ 
 
 </body>
 </html>
